--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "wx",
   "license": "ISC",
   "dependencies": {
+    "brototype": "0.0.5",
     "classnames": "^2.2.1",
     "console-polyfill": "^0.2.2",
     "es6-promise": "^3.0.2",
